test/kubernetes/e2e/features/listener_options/testdata/gw1-no-listenerset.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: gw-1
spec:
  gatewayClassName: gloo-gateway
  listeners:
    - protocol: HTTP
      port: 8080
      name: http
      allowedRoutes:
        namespaces:
          from: Same
    - protocol: HTTP
      port: 8081
      name: other
      allowedRoutes:
        namespaces:
          from: Same
---
