test/kubernetes/e2e/features/listener_options/testdata/listopt-with-listenerset-refs.yaml
apiVersion: gateway.solo.io/v1
kind: ListenerOption
metadata:
  name: header-manipulation-section
spec:
  targetRefs:
  - group: gateway.networking.x-k8s.io
    kind: XListenerSet
    name: gw-1
    sectionName: listener-2
  options:
    perConnectionBufferLimitBytes: 21000
