test/kubernetes/e2e/features/listener_options/testdata/listopt-with-sectioned-target-refs.yaml
apiVersion: gateway.solo.io/v1
kind: ListenerOption
metadata:
  name: header-manipulation
spec:
  targetRefs:
  # - group: gateway.networking.k8s.io
  #   kind: Gateway
  #   name: gw-1
  #   sectionName: http
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gw-2
    sectionName: other
  - group: gateway.networking.x-k8s.io
    kind: XListenerSet
    name: second-workload-listeners
    sectionName: second
  options:
    perConnectionBufferLimitBytes: 42000
