test/kubernetes/e2e/features/listener_options/testdata/setup.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: gw-1
spec:
  gatewayClassName: gloo-gateway
  allowedListeners:
    namespaces:
      from: Same
  listeners:
    - protocol: HTTP
      port: 8080
      name: http
      allowedRoutes:
        namespaces:
          from: Same
    - protocol: HTTP
      port: 8081
      name: other
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.x-k8s.io/v1alpha1
kind: XListenerSet
metadata:
  name: listener-set-1
spec:
  parentRef:
    name: gw-1
    kind: Gateway
    group: gateway.networking.k8s.io
  listeners:
  - name: listener-1
    protocol: HTTP
    port: 8085
    allowedRoutes:
        namespaces:
          from: Same
  - name: listener-2
    protocol: HTTP
    port: 8086
    allowedRoutes:
        namespaces:
          from: Same
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: gw-2
spec:
  gatewayClassName: gloo-gateway
  listeners:
    - protocol: HTTP
      port: 8083
      name: http
      allowedRoutes:
        namespaces:
          from: Same
    - protocol: HTTP
      port: 8084
      name: other
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route-1
spec:
  parentRefs:
    - name: gw-1
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - name: example-svc
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route-2
spec:
  parentRefs:
    - name: gw-2
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - name: example-svc
          port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: example-svc
spec:
  selector:
    app.kubernetes.io/name: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http-web-svc
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: nginx
spec:
  containers:
    - name: nginx
      image: nginx:stable
      ports:
        - containerPort: 80
          name: http-web-svc
